* Remove client refresh on detail export which is not needed. Change context menu action from
    <JavaScriptAction>bcdui._migPjs._$(this.eventSrcElement).trigger("cubeActions:contextMenuCubeClientRefresh", {actionId: 'exportWysiwygAsExcel'})</JavaScriptAction>
    to
    <JavaScriptAction>bcdui._migPjs._$(this.eventSrcElement).trigger("cubeActions:reportExport")</JavaScriptAction>

. Widgets
* periodChooser got new options: useSimpleXPath to use a straight forward xpath, autoPopup to directly show the popup calendar and suppressButtons to not show any buttons at all
* enableNavPath attribute to turn on/off navPath linkage (default is off (false))
* New widget: "slider", based on noUiSlider implementation
* Context menu: added support for multi-context, i.e. <div contextId="is-editable is-removable"></div>
* menu.xml: added implicit i18n support for title, caption attributes; please, take a look at "incompatibilites" as well.

. Core
* Promise polyfill: ecma6-promise (used for IE)
* Wrs: add support for JDBC SQLXML type
* SimpleModel: add saveChain/Parameters to be able to modify save actions
* DataProvider: added support for xpath with placeholders/fill parameters for query/queryNodes/read/write/remove operations. Mainly for handling quote/apostrophe issues when dynamically building up xPath Expressions
    Example: bcdui.wkModels.guiStatus.read("//guiStatus:ClientSettings/guiStatus:Test[@caption='{{=it[0]}}' and @caption2='{{=it[1]}}']", ["china's republic", "drag\"n drop"]);
* BindingSet Relation added IsLike condition for joins

. Themes
* new pageEffect bcdEffectPageStickyFooter

. Security
* client-controlled subject filters
** the new servlet-filter de.businesscode.bcdui.web.filters.SubjectSettingsFilter allows setting subject filters from client
** client-controlled subject filters can be set from client via bcdui.util.security API

. Server
* Updated 3rd party jars (apache commons etc) to latest versions